# CosmicUnderground

./: .gitignore  AudioWorld_Infinite.py  AudioWorld_Infinite2.py  AudioWorld_Overworld.py  AudioWorld_Overworld202508302239.py  AudioWorld_Overworld_202508302037.py  README.md  REFACTORING_PLAN.md  generate2.py  generate3.py  last_prompt.txt  promptgen.py  promptgen_202508301400.py  promptgen_202508301559.py  promptgen_202508301604.py  promptgen_202508301616.py  promptgen_202508301811.py  pyproject.toml
attic/: AudioWorld.py  AudioWorld2.py  AudioWorld_Infinite5 - Copy.py  generate4.py  last_prompt.txt
attic/game/: main.py
attic/game/assets/: loader.py
attic/game/audio/: alien_track.py  mixer.py  timeline.py
attic/game/core/: debug.py  game_state.py  utils.py
attic/game/editor/: cosmic_daw_old.py  daw_clip_operations.py  daw_track.py  daw_ui.py  mixing_station.py  (+1 more)
attic/legacy/: AudioWorld_Infinite3.py  AudioWorld_Infinite4.py  AudioWorld_Infinite6.py  AudioWorld_Overworld202508302248.py  AudioWorld_Overworld_202508302111.py
docs/: CHANGELOG.md  REFACTORING_COMPLETE.md
game/audio/: track.py
game/core/: config.py  daw_config.py  daw_validation.py  screen.py
game/editor/: alien_dj_panel.py  cosmic_daw.py  daw_actions.py  daw_audio.py  daw_clip.py  daw_timeline.py  mix_manager.py
game/world/: zones.py
mixes/: Chill.mix  ChillVibes.mix  ChillViibes.mix  Mix.mix  MixNew.mix  Mix_15023.mix  Mix_9050.mix
scripts/: run_tests.py
src/cosmic_underground/: controller.py
tests/: test_cosmic_daw.py  test_daw_validation.py
tools/: constraints.txt
(+42 files in other folders)
