[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cosmic-underground"
version = "0.0.0"
description = "Cosmic Underground prototype"
requires-python = ">=3.10"
dependencies = [
    "pygame>=2.6",
    "numpy",
    "soundfile",
    # add: torch, stable-audio-tools, etc., when ready
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
cosmic-underground = "cosmic_underground.app.main:main"